test_regress/t/t_fsmmulti_same_bad.out
%Warning-COVERIGN: t/t_fsmmulti_same_bad.v:34:5: Ignoring unsupported: FSM coverage on multiple supported case statements found in the same always block. Only the first candidate will be instrumented.
   34 |     case (state)
      |     ^~~~
                   t/t_fsmmulti_same_bad.v:29:7: ... Location of first supported candidate for 't.state'
   29 |       case (state)
      |       ^~~~
                   ... For warning description see https://verilator.org/warn/COVERIGN?v=latest
                   ... Use "/* verilator lint_off COVERIGN */" and lint_on around source to disable this message.
%Warning-COVERIGN: t/t_fsmmulti_same_bad.v:44:5: Ignoring unsupported: FSM coverage on multiple supported transition candidates found in the same always block. Only the first candidate will be instrumented.
   44 |     if (state_if == S1) state_if <= S2;
      |     ^~
                   t/t_fsmmulti_same_bad.v:41:5: ... Location of first supported candidate for 't.state_if'
   41 |     if (state_if == S0) state_if <= S1;
      |     ^~
%Error: Exiting due to
